--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "3.2.20", features = ["derive"] }
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+serde_json = "1.0"
