--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,10 @@
 				"mutantdino.resourcemonitor",
 				"rust-lang.rust-analyzer",
 				"tamasfe.even-better-toml",
-				"serayuzgur.crates"
+				"serayuzgur.crates",
+				"vivaxy.vscode-conventional-commits",
+				"EditorConfig.EditorConfig",
+				"GitHub.copilot"
 			]
 		}
 	},
