--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,3 +17,5 @@ jobs:
       - run: rustup update stable && rustup default stable
       - run: cargo build --verbose
       - run: cargo test --verbose
+      - run: cargo fmt -- --check
+      - run: cargo clippy --no-deps -- -Dwarnings
