--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,5 @@ edition = "2021"
 [dependencies]
 arrow = "27.0.0"
 tokio = { version = "1.11.0", features = ["full"] }
-deltalake = { git = "https://github.com/delta-io/delta-rs", features = [
-    "datafusion-ext",
-] }
+deltalake = { version = "0.5.0", features = ["datafusion-ext"] }
 datafusion = "14.0.0"
